Fix end game popup

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -317,7 +317,7 @@
     "gameCompleted": {
       "title": "Congratulations!",
       "congratulations": "You've guessed all available countries!",
-      "questionsCompleted": "Questions completed: {{current}}/{{total}}",
+      "questionsCompleted": "Questions completed: {{total}}",
       "yourScore": "Your score:",
       "bestStreak": "Best streak:",
       "encouragement": "Amazing job! Ready for another round?",
