Fix game restart after game over

--- a/src/i18n/locales/fr/translation.json
+++ b/src/i18n/locales/fr/translation.json
@@ -316,8 +316,8 @@
       "yourScore": "Ton score :",
       "bestStreak": "Meilleur combo :",
       "encouragement": "Incroyable ! Prêt pour un autre tour ?",
-      "restart": "Recommencer le Challenge",
-      "exit": "Retour au Menu"
+      "restart": "Recommencer le challenge",
+      "exit": "Retour au menu"
     }
   },
   "tutorial": {
